crates/general/fixtures/invalid/lambda_tight_dot.zt
-- The lambda dot must be separated from the previous pattern by whitespace.

{
  bad = \x.y;
}
